--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
     "session": "^0.1.0"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
   }
 }
